# python-bluetooth-mesh-network

./: README.rst  pyproject.toml
bluetooth_mesh/network/: mesh.py  provisioning.py
tests/: test_key_derivation.py  test_mesh.py  test_provisioning.py  test_security.py
